--- a/404.html
+++ b/404.html
@@ -35,7 +35,16 @@
             <a href="/" class="header__enlace">Inicio</a>
             <a href="/nosotros.html" class="header__enlace">Nosotros</a>
             <a href="/galeria.html" class="header__enlace">Galería</a>
-            <a href="/blog.html" class="header__enlace">Blog</a>
+            <div class="dropdown">
+                <a href="/blog.html" class="header__enlace">Blog&dtrif;</a>
+                <div class="dropdown__contenido">
+                    <a href="/blog.html#Noticias-y-tendencias" class="dropdown__enlace">Noticias y tendencias</a>
+                    <a href="/blog.html#Recetas-de-cafe" class="dropdown__enlace">Recetas de cafe</a>
+                    <a href="/blog.html#Salud-y-bienestar" class="dropdown__enlace">Salud y bienestar</a>
+                    <a href="/blog.html#Historia-y-origen" class="dropdown__enlace">Historia y origen</a>
+                    <a href="/blog.html#Cultivo-y-procesamiento" class="dropdown__enlace">Cultivo y procesamiento</a>
+                </div>
+            </div>
             <a href="/suscribete.html" class="header__enlace">Suscríbete</a>
         </nav>
     </header>
