Cambios de info e imagenes

--- a/blog.html
+++ b/blog.html
@@ -74,58 +74,58 @@
                         <source srcset="/build/img/blog1.webp" type="image/webp">
                         <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
+                    <h2 class="blog__titulo">Industria del café y su impacto al medio ambiente</h2>
                     <!-- CAMBIAR EL PARRAFO -->
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <p class="blog__extracto">La industria del café es una de las más importantes del mundo, y su impacto en el medio ambiente puede ser significativo. La producción de café puede tener un efecto negativo en el medio ambiente debido al uso de pesticidas, la deforestación, la contaminación del agua y la emisión de gases de efecto invernadero.</p>
                     <div>
                         <!-- CAMBIAR A LA RUTA CON EL NOMBRE DEL ARCHIVO QUE VALLAS A CREAR -->
-                        <a href="/blog/blog1.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/1IndustriaCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                <!-- <li class="blog__post">
+                 <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog2.avif" type="image/avif">
+                        <source srcset="/build/img/blog2.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog2.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">El tostado del café y los peligros asociados</h2>
+                    <p class="blog__extracto">El café es una de las bebidas más populares en todo el mundo, y su proceso de tostado es una etapa fundamental para obtener su sabor y aroma característicos. Sin embargo, es importante tener en cuenta que trabajar con máquinas tostadoras de café conlleva ciertos riesgos y peligros que deben abordarse de manera adecuada.</p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/2PeligroDelTostado.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
-                </li> -->
+                </li>
             </ul>
         </article>
 
         <hr id="Recetas-de-cafe">
 
         <article class="my-3">
-            <h2 class="blog__subtitulo">Recetas de café</h2>
+            <h2 class="blog__subtitulo">Recetas y Empresas de café</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog3.avif" type="image/avif">
+                        <source srcset="/build/img/blog3.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog3.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">Las 5 recetas más comunes en la preparación de café</h2>
+                    <p class="blog__extracto">Desde aquellos que prefieren sabores suaves y suaves hasta los amantes del chocolate o los que buscan una experiencia más intensa, estas recetas ofrecen opciones versátiles y deliciosas para disfrutar de esta apreciada bebida.</p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/3RecetasDeCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                <!-- <li class="blog__post">
+                 <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog4.avif" type="image/avif">
+                        <source srcset="/build/img/blog4.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog5.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">Las Empresas productoras de café mas famosas</h2>
+                    <p class="blog__extracto">El café es una de las bebidas más populares y consumidas en todo el mundo, y detrás de esta industria se encuentran algunas empresas famosas que se dedican a la producción y comercialización de café de alta calidad.</p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/4EmpresasCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
-                </li> -->
+                </li> 
             </ul>
         </article>
 
@@ -136,92 +136,92 @@
             <ul class="blog__posts">
                 <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog5.avif" type="image/avif">
+                        <source srcset="/build/img/blog5.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog5.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">El Café y sus Beneficios para la Salud</h2>
+                    <p class="blog__extracto">Más allá de su sabor y aroma atractivos, el café contiene compuestos bioactivos que pueden tener efectos positivos en nuestro organismo. </p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/5BeneficiosCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                <!-- <li class="blog__post">
+                <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog6.avif" type="image/avif">
+                        <source srcset="/build/img/blog6.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog6.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">Los Efectos Negativos del Consumo Excesivo de Café</h2>
+                    <p class="blog__extracto">Aunque el café tiene una serie de beneficios para la salud cuando se consume moderadamente, su consumo excesivo puede tener efectos negativos en el organismo. </p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/6DanosCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
-                </li> -->
+                </li>
             </ul>
         </article>
 
         <hr id="Historia-y-origen">
 
         <article class="my-3">
-            <h2 class="blog__subtitulo">Historia y origen del café</h2>
+            <h2 class="blog__subtitulo">Historia y Origen</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog7.avif" type="image/avif">
+                        <source srcset="/build/img/blog7.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog7.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">Una breve clase de historia, origenes del café</h2>
+                    <p class="blog__extracto">El café, la bebida deliciosa que disfrutamos hoy, tiene una historia interesante y orígenes que se remontan a cientos de años.</p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/7HistoriaDelCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                <!-- <li class="blog__post">
+                <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog8.avif" type="image/avif">
+                        <source srcset="/build/img/blog8.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog8.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">Los principales productores de café en el mundo, una lista de los mas respetados</h2>
+                    <p class="blog__extracto">Los principales productores de café en el mundo, una lista de los mas respetados. </p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/8PaisesCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
-                </li> -->
+                </li> 
             </ul>
         </article>
 
         <hr id="Cultivo-y-procesamiento">
 
         <article class="my-3">
-            <h2 class="blog__subtitulo">Cultivo y procesamiento del café</h2>
+            <h2 class="blog__subtitulo">Cultivo y procesamiento</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog9.avif" type="image/avif">
+                        <source srcset="/build/img/blog9.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog9.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">Principales productores de café en México</h2>
+                    <p class="blog__extracto">México es uno de los principales productores de café del mundo y cuenta con diversas regiones cafetaleras que se destacan por la calidad y sabor de su café.</p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/9IndustriaMexicoCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                <!-- <li class="blog__post">
+                 <li class="blog__post">
                     <picture>
-                        <source srcset="/build/img/blog1.avif" type="image/avif">
-                        <source srcset="/build/img/blog1.webp" type="image/webp">
-                        <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                        <source srcset="/build/img/blog10.avif" type="image/avif">
+                        <source srcset="/build/img/blog10.webp" type="image/webp">
+                        <img loading="lazy" src="/build/img/blog10.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                    <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                    <h2 class="blog__titulo">La industria del café en México</h2>
+                    <p class="blog__extracto">El país ha sido un productor importante desde la época colonial. Hoy en día, México es uno de los principales productores de café en el mundo, con una producción anual de alrededor de 4.5 millones de sacos de café.</p>
                     <div>
-                        <a href="#" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/10PrincipalesProductoresMexicoCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
-                </li> -->
+                </li>
             </ul>
         </article>        
     </main>
