--- a/index.html
+++ b/index.html
@@ -137,31 +137,28 @@
         <ul class="blog__posts">
             <li class="blog__post">
                 <picture>
-                    <source srcset="/build/img/blog1.avif" type="image/avif">
-                    <source srcset="/build/img/blog1.webp" type="image/webp">
-                    <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                    <source srcset="/build/img/blog10.avif" type="image/avif">
+                    <source srcset="/build/img/blog10.webp" type="image/webp">
+                    <img loading="lazy" src="/build/img/blog10.jpg" alt="Foto del Blog 1">
                 </picture>
-                <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café
-                    prefieren estas tiendas?</h2>
-                <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae
-                    nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti
-                    ipsum labore nesciunt quas, magnam expedita similique.</p>
+                <h2 class="blog__titulo">La industria del café en México</h2>
+                <p class="blog__extracto">El país ha sido un productor importante desde la época colonial. Hoy en día, México es uno de los principales productores de café en el mundo, con una producción anual de alrededor de 4.5 millones de sacos de café.</p>
                 <div>
-                    <a href="/blog/blog1.html" class="blog__boton--negro">Leer entrada</a>
+                    <a href="/blog/10PrincipalesProductoresMexicoCafe.html" class="blog__boton--negro">Leer entrada</a>
                 </div>
             </li>
-            <!-- <li class="blog__post">
+             <li class="blog__post">
                 <picture>
-                    <source srcset="/build/img/blog1.avif" type="image/avif">
-                    <source srcset="/build/img/blog1.webp" type="image/webp">
-                    <img loading="lazy" src="/build/img/blog1.jpg" alt="Foto del Blog 1">
+                    <source srcset="/build/img/blog7.avif" type="image/avif">
+                    <source srcset="/build/img/blog7.webp" type="image/webp">
+                    <img loading="lazy" src="/build/img/blog7.jpg" alt="Foto del Blog 1">
                 </picture>
-                <h2 class="blog__titulo">El auge de las cafeterías especializadas: ¿por qué los expertos en café prefieren estas tiendas?</h2>
-                <p class="blog__extracto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe vitae nostrum dolores harum dignissimos esse? Fuga fugiat aperiam fugit quisquam consectetur, deleniti ipsum labore nesciunt quas, magnam expedita similique.</p>
+                <h2 class="blog__titulo">Una breve clase de historia, origenes del café</h2>
+                <p class="blog__extracto">El café, la bebida deliciosa que disfrutamos hoy, tiene una historia interesante y orígenes que se remontan a cientos de años.</p>
                 <div>
-                    <a href="#" class="blog__boton--negro">Leer entrada</a>
+                    <a href="/blog/7HistoriaDelCafe.html" class="blog__boton--negro">Leer entrada</a>
                 </div>
-            </li> -->
+            </li>
         </ul>
         <a href="/blog.html" class="seccion__boton--negro">Ver todas las entradas</a>
     </section>
