--- a/nosotros.html
+++ b/nosotros.html
@@ -97,7 +97,7 @@
         <a href="/" class="footer__logo">
             <h1 class="footer__heading">Blog<span class="footer__span">DeCafé</span></h1>
         </a>
-        <p class="footer__mensaje">Oprime en alguno de los siguientes iconos para seguirnos en nuestras resde sociales
+        <p class="footer__mensaje">Oprime en alguno de los siguientes iconos para seguirnos en nuestras redes sociales
         </p>
         <div class="footer__sociales">
             <a href="#">
