--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
+    <!-- CSS - AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--CSS -->
     <link rel="preload" href="/build/css/app.css" as="style">
     <link rel="stylesheet" href="/build/css/app.css">
@@ -65,7 +67,7 @@
         <span id="Noticias-y-tendencias"></span>
         <h1 class="blog__heading">Blog</h1>
 
-        <article class="my-3">
+        <article data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="my-5">
             <h2 class="blog__etiqueta">Noticias y tendencias</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
@@ -76,20 +78,26 @@
                     </picture>
                     <h2 class="blog__titulo">Industria del café y su impacto al medio ambiente</h2>
                     <!-- CAMBIAR EL PARRAFO -->
-                    <p class="blog__extracto">La industria del café es una de las más importantes del mundo, y su impacto en el medio ambiente puede ser significativo. La producción de café puede tener un efecto negativo en el medio ambiente debido al uso de pesticidas, la deforestación, la contaminación del agua y la emisión de gases de efecto invernadero.</p>
+                    <p class="blog__extracto">La industria del café es una de las más importantes del mundo, y su
+                        impacto en el medio ambiente puede ser significativo. La producción de café puede tener un
+                        efecto negativo en el medio ambiente debido al uso de pesticidas, la deforestación, la
+                        contaminación del agua y la emisión de gases de efecto invernadero.</p>
                     <div>
                         <!-- CAMBIAR A LA RUTA CON EL NOMBRE DEL ARCHIVO QUE VALLAS A CREAR -->
                         <a href="/blog/1IndustriaCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                 <li class="blog__post">
+                <li class="blog__post">
                     <picture>
                         <source srcset="/build/img/blog2.avif" type="image/avif">
                         <source srcset="/build/img/blog2.webp" type="image/webp">
                         <img loading="lazy" src="/build/img/blog2.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">El tostado del café y los peligros asociados</h2>
-                    <p class="blog__extracto">El café es una de las bebidas más populares en todo el mundo, y su proceso de tostado es una etapa fundamental para obtener su sabor y aroma característicos. Sin embargo, es importante tener en cuenta que trabajar con máquinas tostadoras de café conlleva ciertos riesgos y peligros que deben abordarse de manera adecuada.</p>
+                    <p class="blog__extracto">El café es una de las bebidas más populares en todo el mundo, y su proceso
+                        de tostado es una etapa fundamental para obtener su sabor y aroma característicos. Sin embargo,
+                        es importante tener en cuenta que trabajar con máquinas tostadoras de café conlleva ciertos
+                        riesgos y peligros que deben abordarse de manera adecuada.</p>
                     <div>
                         <a href="/blog/2PeligroDelTostado.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
@@ -99,7 +107,7 @@
 
         <hr id="Recetas-de-cafe">
 
-        <article class="my-3">
+        <article data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="my-5">
             <h2 class="blog__subtitulo">Recetas y Empresas de café</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
@@ -109,29 +117,33 @@
                         <img loading="lazy" src="/build/img/blog3.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">Las 5 recetas más comunes en la preparación de café</h2>
-                    <p class="blog__extracto">Desde aquellos que prefieren sabores suaves y suaves hasta los amantes del chocolate o los que buscan una experiencia más intensa, estas recetas ofrecen opciones versátiles y deliciosas para disfrutar de esta apreciada bebida.</p>
+                    <p class="blog__extracto">Desde aquellos que prefieren sabores suaves y suaves hasta los amantes del
+                        chocolate o los que buscan una experiencia más intensa, estas recetas ofrecen opciones
+                        versátiles y deliciosas para disfrutar de esta apreciada bebida.</p>
                     <div>
                         <a href="/blog/3RecetasDeCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                 <li class="blog__post">
+                <li class="blog__post">
                     <picture>
                         <source srcset="/build/img/blog4.avif" type="image/avif">
                         <source srcset="/build/img/blog4.webp" type="image/webp">
                         <img loading="lazy" src="/build/img/blog5.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">Las Empresas productoras de café mas famosas</h2>
-                    <p class="blog__extracto">El café es una de las bebidas más populares y consumidas en todo el mundo, y detrás de esta industria se encuentran algunas empresas famosas que se dedican a la producción y comercialización de café de alta calidad.</p>
+                    <p class="blog__extracto">El café es una de las bebidas más populares y consumidas en todo el mundo,
+                        y detrás de esta industria se encuentran algunas empresas famosas que se dedican a la producción
+                        y comercialización de café de alta calidad.</p>
                     <div>
                         <a href="/blog/4EmpresasCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
-                </li> 
+                </li>
             </ul>
         </article>
 
         <hr id="Salud-y-bienestar">
 
-        <article class="my-3">
+        <article data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="my-5">
             <h2 class="blog__subtitulo">Salud y bienestar</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
@@ -141,7 +153,8 @@
                         <img loading="lazy" src="/build/img/blog5.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">El Café y sus Beneficios para la Salud</h2>
-                    <p class="blog__extracto">Más allá de su sabor y aroma atractivos, el café contiene compuestos bioactivos que pueden tener efectos positivos en nuestro organismo. </p>
+                    <p class="blog__extracto">Más allá de su sabor y aroma atractivos, el café contiene compuestos
+                        bioactivos que pueden tener efectos positivos en nuestro organismo. </p>
                     <div>
                         <a href="/blog/5BeneficiosCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
@@ -153,7 +166,8 @@
                         <img loading="lazy" src="/build/img/blog6.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">Los Efectos Negativos del Consumo Excesivo de Café</h2>
-                    <p class="blog__extracto">Aunque el café tiene una serie de beneficios para la salud cuando se consume moderadamente, su consumo excesivo puede tener efectos negativos en el organismo. </p>
+                    <p class="blog__extracto">Aunque el café tiene una serie de beneficios para la salud cuando se
+                        consume moderadamente, su consumo excesivo puede tener efectos negativos en el organismo. </p>
                     <div>
                         <a href="/blog/6DanosCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
@@ -163,7 +177,7 @@
 
         <hr id="Historia-y-origen">
 
-        <article class="my-3">
+        <article data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="my-5">
             <h2 class="blog__subtitulo">Historia y Origen</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
@@ -173,7 +187,8 @@
                         <img loading="lazy" src="/build/img/blog7.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">Una breve clase de historia, origenes del café</h2>
-                    <p class="blog__extracto">El café, la bebida deliciosa que disfrutamos hoy, tiene una historia interesante y orígenes que se remontan a cientos de años.</p>
+                    <p class="blog__extracto">El café, la bebida deliciosa que disfrutamos hoy, tiene una historia
+                        interesante y orígenes que se remontan a cientos de años.</p>
                     <div>
                         <a href="/blog/7HistoriaDelCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
@@ -184,18 +199,20 @@
                         <source srcset="/build/img/blog8.webp" type="image/webp">
                         <img loading="lazy" src="/build/img/blog8.jpg" alt="Foto del Blog 1">
                     </picture>
-                    <h2 class="blog__titulo">Los principales productores de café en el mundo, una lista de los mas respetados</h2>
-                    <p class="blog__extracto">Los principales productores de café en el mundo, una lista de los mas respetados. </p>
+                    <h2 class="blog__titulo">Los principales productores de café en el mundo, una lista de los mas
+                        respetados</h2>
+                    <p class="blog__extracto">Los principales productores de café en el mundo, una lista de los mas
+                        respetados. </p>
                     <div>
                         <a href="/blog/8PaisesCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
-                </li> 
+                </li>
             </ul>
         </article>
 
         <hr id="Cultivo-y-procesamiento">
 
-        <article class="my-3">
+        <article data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="my-5">
             <h2 class="blog__subtitulo">Cultivo y procesamiento</h2>
             <ul class="blog__posts">
                 <li class="blog__post">
@@ -205,25 +222,29 @@
                         <img loading="lazy" src="/build/img/blog9.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">Principales productores de café en México</h2>
-                    <p class="blog__extracto">México es uno de los principales productores de café del mundo y cuenta con diversas regiones cafetaleras que se destacan por la calidad y sabor de su café.</p>
+                    <p class="blog__extracto">México es uno de los principales productores de café del mundo y cuenta
+                        con diversas regiones cafetaleras que se destacan por la calidad y sabor de su café.</p>
                     <div>
                         <a href="/blog/9IndustriaMexicoCafe.html" class="blog__boton--negro">Leer entrada</a>
                     </div>
                 </li>
-                 <li class="blog__post">
+                <li class="blog__post">
                     <picture>
                         <source srcset="/build/img/blog10.avif" type="image/avif">
                         <source srcset="/build/img/blog10.webp" type="image/webp">
                         <img loading="lazy" src="/build/img/blog10.jpg" alt="Foto del Blog 1">
                     </picture>
                     <h2 class="blog__titulo">La industria del café en México</h2>
-                    <p class="blog__extracto">El país ha sido un productor importante desde la época colonial. Hoy en día, México es uno de los principales productores de café en el mundo, con una producción anual de alrededor de 4.5 millones de sacos de café.</p>
+                    <p class="blog__extracto">El país ha sido un productor importante desde la época colonial. Hoy en
+                        día, México es uno de los principales productores de café en el mundo, con una producción anual
+                        de alrededor de 4.5 millones de sacos de café.</p>
                     <div>
-                        <a href="/blog/10PrincipalesProductoresMexicoCafe.html" class="blog__boton--negro">Leer entrada</a>
+                        <a href="/blog/10PrincipalesProductoresMexicoCafe.html" class="blog__boton--negro">Leer
+                            entrada</a>
                     </div>
                 </li>
             </ul>
-        </article>        
+        </article>
     </main>
 
     <footer class="footer">
@@ -233,18 +254,24 @@
         <p class="footer__mensaje">Oprime en alguno de los siguientes iconos para seguirnos en nuestras redes sociales
         </p>
         <div class="footer__sociales">
-            <a href="https://www.facebook.com/profile.php?id=100092684496308">
+            <a href="https://www.facebook.com/profile.php?id=100092684496308" target="_blank" rel="noopener noreferrer">
                 <img src="/build/img/facebook.svg" alt="Boton facebook" title="Facebook">
             </a>
-            <a href="https://www.youtube.com/channel/UCTCCYtzfrXkR-4xOAq1j-kw">
+            <a href="https://www.youtube.com/channel/UCTCCYtzfrXkR-4xOAq1j-kw" target="_blank"
+                rel="noopener noreferrer">
                 <img src="/build/img/youtube.svg" alt="Boton youtube" title="Youtube">
             </a>
-            <a href="https://twitter.com/BlogDeCafeTwt">
+            <a href="https://twitter.com/BlogDeCafeTwt" target="_blank" rel="noopener noreferrer">
                 <img src="/build/img/twitter.svg" alt="Boton twitter" title="Twitter">
             </a>
         </div>
     </footer>
 
+    <!-- JS - AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <!-- JS -->
     <script src="/build/js/bundle.min.js" defer></script>
 </body>
